<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.geco.gsit</groupId>
    <artifactId>GSit</artifactId>
    <name>GSit</name>
    <version>1.12.0</version>
    <description>Relax with other players on nice seats!</description>
    <url>https://www.spigotmc.org/resources/62325</url>
    <inceptionYear>2018</inceptionYear>
    <packaging>pom</packaging>

    <licenses>
        <license>
            <name>GNU General Public License v3.0</name>
        </license>
    </licenses>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/Gecolay/GSit/issues</url>
    </issueManagement>

    <modules>
        <module>core</module>
        <module>v1_18_2</module>
        <module>v1_19</module>
        <module>v1_19_1</module>
        <module>v1_19_3</module>
        <module>v1_19_4</module>
        <module>v1_20</module>
        <module>v1_20_2</module>
        <module>v1_20_3</module>
        <module>v1_20_5</module>
        <module>v1_21</module>
        <module>v1_21_2</module>
        <module>v1_21_4</module>
        <module>mcv1_18_2</module>
        <module>mcv1_19</module>
        <module>mcv1_19_1</module>
        <module>mcv1_19_3</module>
        <module>mcv1_19_4</module>
        <module>mcv1_20</module>
        <module>mcv1_20_2</module>
        <module>mcv1_20_3</module>
        <module>mcv1_20_5</module>
        <module>mcv1_21</module>
        <module>mcv1_21_2</module>
        <module>mcv1_21_4</module>
        <module>dist</module>
    </modules>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>clean install</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <minimizeJar>true</minimizeJar>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <shadedArtifactAttached>false</shadedArtifactAttached>
                    <outputDirectory>./target</outputDirectory>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/**</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>